trunk/Archive2/15/d1c37c062b0cce/output
main.cpp:1:33: error: expected class name
class Derived4 : virtual public Empty
                                ^
1 error generated.
